<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    android:orientation="vertical"
    tools:context=".NewNotepad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etxtv_title_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_notepad_title"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_save_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/save_notepad" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etxtv_content_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/hint_notepad_content"
            android:inputType="textMultiLine|textPersonName"
            android:singleLine="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/loction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/etxtv_location_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/location_hint"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_location_new"
            android:text="@string/update_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout>