<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    android:orientation="vertical"
    tools:context=".Edit_Notepad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etxtv_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_notepad_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_save_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="2"
            android:text="@string/save_notepad" />

        <Button
            android:id="@+id/btn_delete_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="2"
            android:text="@string/delete_notepad" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etxtv_content_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/hint_notepad_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtv_time_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txtv_location_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textColor="#000000"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>